--- a/backend/package.json
+++ b/backend/package.json
@@ -13,14 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.0",
-    "cloudinary": "^2.5.1",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
-    "nodemailer": "^6.10.0",
+    "node": "^22.18.0",
+    "nodemailer": "^6.10.1",
     "nodemon": "^3.1.4",
     "pdfkit": "^0.16.0"
   },
